* #4083: Remove the active loop and check usb sticks on idle. (tomeu)

Snapshot 5051fc3a4b

Snapshot 26a372063c

* Revert API changes which was breaking activities (tomeu)

Snapshot 7072db5ffd

* #3768 Fix copy of clipboard objects to usb stick (marco)
* #4235: Keep indexing an usb stick after an error in a single file. (tomeu)

Snapshot 89ae26ced4

* Improved mime type handling. (marco)

Snapshot cb0acdf653

* Support for external properties. (bcsaller)
* Better logging. (marco)

Snapshot b603f340b2

* Request binary data as dbus.ByteArray. (tomeu)

Snapshot 23becaa683

* Don't mount automatically at start. (tomeu)
* Exit cleanly when dbus goes down. (marco)

Snapshot 64abebe398

* Do not index binaries. (bcsaller)
* Really fix offset. (bcsaller)

Snapshot 87204de5b9

* Offset support. (bcsaller)
* #3180: Recreate the index on mount failure of only removable devices. (tomeu)

Snapshot dce9c18d56

* #3469 Human readable names on USB. (marco)

Snapshot 11013dc3ca

* #3599 Fix the import logic on USB sticks. (marco)

Snapshot 48ab782a01

* Fix for undefined variable error (dcbw)

Snapshot eb82fe83a3

* #3538: Fix a race when deleting objects. (marco)

Snapshot ea13f75d6a

* #2423: Simple partial matching. (bscaller, backported by marco)

Snapshot 7655f4d99a

* #3374: Don't create another entry during async update. (tomeu)
* #3058: Disable content indexing for Trial-3. (tomeu)

Snapshot b0b4c4115a

* #3324: Fix updates of entries with associated files. (tomeu)

Snapshot 617bf5d005

* Index metadata on async updates. (tomeu)
* Allow retrieving a specific set of properties in find(). (tomeu)
* Add a timestamp field to the model for modification time. (tomeu)

Snapshot 0a7e80f01a

* Fix duplicate datastore entries on item creation caused by last commit
* On update() and create(), copy asynchronously where possible, and
  add new "transfer_ownership" argument to update() and create() that
  allow the datastore to move the object rather than copy it (dcbw)
